--- a/Day_10.ipynb
+++ b/Day_10.ipynb
@@ -1624,7 +1624,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "##### --- There is no correlation between bedget and revenue "
+        "##### --- There is no correlation between budget and revenue "
       ]
     }
   ]
